--- a/assets/css/bio.css
+++ b/assets/css/bio.css
@@ -49,21 +49,64 @@ font-family: 'icomoon';
     margin-right: 0; }
 
 #main-content {
-  padding: 6% 0; }
+  padding: 6% 0 0; }
+  #main-content .view-header {
+    position: absolute;
+    left: 7%;
+    top: -59px;
+    width: 85%; }
+    #main-content .view-header p {
+      margin: 0; }
+    #main-content .view-header ul {
+      margin: 0;
+      padding: 0; }
+    #main-content .view-header li {
+      background: none;
+      border-radius: 0;
+      display: inline-block;
+      opacity: 1;
+      padding: 0 1%; }
+    #main-content .view-header a {
+      background: url(../images/black-bg.png) no-repeat scroll center center;
+      border-radius: 10px;
+      color: #fff;
+      display: block;
+      padding: 6px 8px;
+      text-align: center;
+      text-transform: uppercase;
+      width: 175px; }
+      #main-content .view-header a.active, #main-content .view-header a:hover {
+        background-image: url(../images/footer-bg.png); }
+  #main-content > ul {
+    margin: 0;
+    padding: 0; }
+    #main-content > ul li {
+      background-color: #fff;
+      border-radius: 0 10px 10px 0;
+      display: none;
+      list-style: none;
+      margin-bottom: 25px;
+      overflow: hidden; }
+      #main-content > ul li.Mark {
+        display: inline-block; }
+      #main-content > ul li.active-target {
+        display: inline-block; }
+
+.js #main-content li {
+  margin-bottom: 0; }
 
 #main-image {
   float: left;
-  margin-right: 2%;
   position: relative; }
   #main-image img {
     display: block; }
   #main-image h2 {
-    background: url(../images/footer-bg.png) no-repeat scroll 0 0;
+    background: url(../images/footer-bg.png) no-repeat scroll top center;
     bottom: 0;
     color: #fff;
     font: 3.7em 'nexa_lightregular', sans-serif;
     left: 0;
-    line-height: 1.5em;
+    line-height: 1.6em;
     margin: 0;
     padding: 9% 0 5%;
     position: absolute;
@@ -76,17 +119,90 @@ font-family: 'icomoon';
       margin: 0 auto;
       width: 90%; }
 
-h1 {
-  background: none;
-  color: #4b7c95;
-  left: 0;
-  position: absolute;
-  text-align: center;
-  text-transform: uppercase;
-  top: -392px;
-  width: 100%; }
-
 #page {
   background: url(../images/gray-bg2.png) repeat-x scroll 0 0;
   margin-top: -27px;
   position: relative; }
+  #page .bio-text {
+    float: left;
+    line-height: 1.6em;
+    padding: 2%;
+    width: 73%; }
+    #page .bio-text h3 {
+      border-bottom: 1px solid #dbe5ea;
+      font-size: 1.4em;
+      margin: 0;
+      padding-bottom: 10px; }
+    #page .bio-text p {
+      margin: 10px 0 0; }
+  #page h1 {
+    background: none;
+    color: #4b7c95;
+    left: 0;
+    position: absolute;
+    text-align: center;
+    text-transform: uppercase;
+    top: -392px;
+    width: 100%; }
+
+#post-content {
+  background: url(../images/dkgray-bg.png) repeat-x scroll 0 0;
+  margin-top: -20px;
+  position: relative; }
+  #post-content .view-content ul {
+    background: url(../images/blk50-rpt.png) repeat scroll 0 0;
+    border-radius: 10px;
+    list-style: none;
+    margin: 0;
+    overflow: hidden;
+    padding: 2% 2% 6%; }
+    #post-content .view-content ul li {
+      float: left;
+      margin: 1% 1.8%; }
+  #post-content .item-list-pager {
+    text-align: center;
+    width: 14%;
+    margin: -55px auto 0; }
+    #post-content .item-list-pager ul {
+      list-style: none;
+      margin: 0;
+      padding: 0; }
+    #post-content .item-list-pager li {
+      border: 9px solid #3d5562;
+      border-top-color: transparent;
+      border-bottom-color: transparent;
+      border-left-color: transparent;
+      display: block;
+      float: left;
+      height: 0;
+      margin: 0 4%;
+      position: relative;
+      top: 3px; }
+      #post-content .item-list-pager li.current {
+        border: none;
+        color: #fff;
+        height: auto;
+        top: -3px;
+        width: auto; }
+      #post-content .item-list-pager li.last {
+        border-left-color: #3d5562;
+        border-right-color: transparent; }
+      #post-content .item-list-pager li a {
+        border: 9px solid #4b7c95;
+        border-top-color: transparent;
+        border-bottom-color: transparent;
+        border-left-color: transparent;
+        display: inline-block;
+        height: 0;
+        left: -9px;
+        overflow: hidden;
+        position: absolute;
+        top: -9px;
+        width: 0; }
+      #post-content .item-list-pager li.last a {
+        border-left-color: #4b7c95;
+        border-right-color: transparent; }
+
+#post-inner {
+  height: 435px;
+  padding: 3% 0; }
