--- a/assets/scss/bio.scss
+++ b/assets/scss/bio.scss
@@ -208,3 +208,8 @@ font-family: 'icomoon';
   height: 435px;
   padding: 3% 0;
 }
+.view-filters {
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
